# filings-watcher

./: .gitignore  .markdownlint-cli2.jsonc  CONTRIBUTING.md  LICENSE  README.md  justfile
.github/workflows/: ci.yml  deploy.yml
docs/: vision.md
docs/decisions/: 0001-form-choice-8k-first.md  0002-stack-python-go-rust.md  0003-north-star-positioning.md  0004-python-via-uv-and-monorepo-layout.md  0005-compute-architecture-read-mostly-and-async-workers.md  0006-edgar-ingestion-via-per-company-submissions-feed.md  0007-edgar-document-fetch-html-parsing.md  0008-sqlite-for-v0-persistence.md  0009-go-service-with-stdlib-http.md  0010-8k-classifier-design.md  0011-classification-history-and-reclassification.md  0012-ingestion-cadence-periodic-v0-push-v1.md  0013-operational-observability-for-v0.md  0014-operator-access-via-mesh-vpn.md  0015-deploy-pipeline-and-iac-for-v0.md  0016-tls-acme-and-ca-pinning.md  0017-deploy-logic-in-ssm-document.md  0018-observability-otel-native-operator-controlled.md  0019-data-persistence-across-instance-replacement.md  0020-secrets-and-migration-rollback.md  0021-realtime-8k-ingest-via-daily-index.md  0022-anthropic-prompt-caching-for-classifier.md  0023-frontend-presentation-server-rendered-pico-via-cdn.md  (+21 more)
infra/: Caddyfile.tpl  README.md  artifacts.tf  cloudwatch.tf  data_volume.tf  ec2.tf  github_oidc.tf  iam.tf  main.tf  outputs.tf  route53.tf  security.tf  snapshots.tf  sns.tf  ssm_deploy.tf  ssm_install_caddy_config.tf  ssm_install_orchestrate_timer.tf  ssm_install_otel_collector.tf  ssm_orchestrate.tf  terraform.tfvars.example  user_data.sh.tpl  variables.tf
orchestrator/: .env.example  README.md  pyproject.toml
orchestrator/db/migrations/: 001_initial_schema.sql  002_ingest_cursor.sql  003_cik_tickers.sql  004_runs_and_events.sql  005_cost_events.sql  005_llm_calls.sql  006_submitted_at.sql  007_classify_attempts.sql  008_alerts_outbox.sql  009_exhibits.sql  010_taxonomy_snapshots.sql  011_classifications_append_only.sql  012_insider_transactions.sql  012_section_kind.sql  013_insider_filings_and_cursor.sql  014_insider_derivative_transactions.sql  015_periodic_filings.sql  016_filing_block_embeddings.sql  017_filing_diffs.sql  018_block_change_verdicts.sql
orchestrator/src/filings_orchestrator/: __init__.py  alerts.py  business_days.py  config.py  log_events.py  otel_setup.py  smoke_test.py
orchestrator/src/filings_orchestrator/alerting/: __init__.py  drain.py  emit.py  notify.py  outbox.py
orchestrator/src/filings_orchestrator/change_detection/: __init__.py  diffing.py  embeddings.py  materiality.py  sectioning.py
orchestrator/src/filings_orchestrator/classify/: __init__.py  classifier.py  exhibits.py  reducer.py  retry.py  schema.py  taxonomy.py
orchestrator/src/filings_orchestrator/cli/: _eval.py  _pipeline.py  check_ingest_freshness.py  classify_ab.py  classify_filing.py  detect_over_emission.py  diff_filings.py  embed_blocks.py  exhibit_ab.py  fetch_edgar.py  judge_changes.py  migrate_db.py  reclassify_orphans.py  reduce_corpus.py  scan_atom_feed.py  scan_daily_index.py  scan_form4.py  scan_periodic.py  scan_tickers.py
orchestrator/src/filings_orchestrator/cost/: __init__.py  pricing.py  sink.py
orchestrator/src/filings_orchestrator/edgar/: __init__.py  atom_feed.py  client.py  daily_index.py  document.py  filing_resolver.py  filings.py  form4.py  models.py
orchestrator/src/filings_orchestrator/persistence/: __init__.py  db.py  migrations.py  repository.py  taxonomy_snapshot.py
orchestrator/tests/: test_alarm_drain.py  test_alerts.py  test_atom_feed.py  test_business_days.py  test_check_ingest_freshness_cli.py  test_cik_tickers.py  test_classify.py  test_classify_6k.py  test_classify_ab.py  test_config.py  test_cost.py  test_daily_index.py  test_detect_over_emission.py  test_diff_filings.py  test_diffing.py  test_document.py  test_edgar.py  test_embeddings.py  test_eval.py  test_events_runs.py  test_exhibit_ab.py  test_exhibits.py  test_filing_resolver.py  test_form4.py  test_materiality.py  test_notify.py  test_otel_setup.py  test_periodic_persistence.py  test_persistence.py  test_pipeline_classify_failure_alert.py  test_pipeline_exhibits.py  test_reclassify_orphans.py  test_reduce.py  test_reduce_corpus_cli.py  test_retry.py  test_scan_atom_feed_cli.py  test_scan_daily_index_cli.py  test_scan_form4_cli.py  test_scan_periodic_cli.py  test_scan_tickers_cli.py  (+2 more)
orchestrator/tests/fixtures/: atom_feed_8k.xml  atom_feed_cli_minimal.xml  filing_index_10k.html  filing_index_8k.html  form4_optiononly.xml  form4_ownership.xml  master_20260515.idx  master_cli_minimal.idx  sample_10k_no_bold_headers.html  sample_10k_risk_factors.html  sample_8k.html  sample_8k_inline_tags.html  sample_8k_xhtml.html  submissions_aapl.json
service/: README.md  go.mod  go.sum
(+46 files in other folders)
