[project]
name = "filings-orchestrator"
version = "0.1.0"
description = "Agent orchestration for filings-watcher: ingest, classify, and brief SEC 8-K filings"
readme = "README.md"
authors = [
    { name = "Pinchas Lev", email = "34498865+PinchasLev@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "httpx>=0.28.1",
    "langchain-anthropic>=1.4.3",
    "langgraph>=1.2.0",
    "langsmith>=0.8.3",
    "lxml>=6.1.0",
    "opentelemetry-api>=1.30.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.30.0",
    "opentelemetry-instrumentation-langchain>=0.60.0",
    "opentelemetry-sdk>=1.30.0",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.49",
    # Transitive constraint: opentelemetry-instrumentation-langchain 0.60.0
    # calls wrapt.wrap_function_wrapper with module=... keyword. Wrapt 2.x
    # renamed that parameter to target, so the call raises TypeError at
    # instrument() time. Traceloop's main branch has the fix (PR #4082,
    # switched to positional args) but no release ships it yet. Pin wrapt
    # to the 1.x line until that release lands, then drop this constraint.
    "wrapt<2.0",
]

[project.scripts]
smoke-test = "filings_orchestrator.smoke_test:main"
fetch-edgar = "filings_orchestrator.cli.fetch_edgar:main"
classify-filing = "filings_orchestrator.cli.classify_filing:main"
migrate-db = "filings_orchestrator.cli.migrate_db:main"
scan-daily-index = "filings_orchestrator.cli.scan_daily_index:main"
scan-atom-feed = "filings_orchestrator.cli.scan_atom_feed:main"
scan-tickers = "filings_orchestrator.cli.scan_tickers:main"
reduce-corpus = "filings_orchestrator.cli.reduce_corpus:main"
detect-over-emission = "filings_orchestrator.cli.detect_over_emission:main"
reclassify-orphans = "filings_orchestrator.cli.reclassify_orphans:main"
alarm-drain = "filings_orchestrator.alerting.drain:main"
exhibit-ab = "filings_orchestrator.cli.exhibit_ab:main"

[build-system]
requires = ["uv_build>=0.11.14,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "respx>=0.23.1",
    "ruff>=0.15.12",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
